--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -205,6 +205,8 @@
             font-weight: 600;
             line-height: 40px;
             text-align: left;
+            text-decoration: none;
+            color: white;
             @include media(1200px) {
                 font-size: 28px;
                 line-height: 34px;
