--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -1,5 +1,3 @@
-
-
 .nav {
     padding: 32px 0;
     z-index: 999;
@@ -35,18 +33,22 @@
         right: 5%;
         bottom: -120px;
         z-index: -1;
+
         @include media (1410px) {
             width: 80px;
             bottom: -90px;
         }
+
         @include media (1000px) {
             width: 60px;
             bottom: -60px;
         }
+
         @include media (600px) {
             width: 50px;
             bottom: -55px;
         }
+
         &_img {
 
             width: 100%;
@@ -90,6 +92,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+
         // position: relative;
         &_container {
             display: flex;
@@ -123,6 +126,7 @@
                 padding-top: 30px;
                 height: 100vh;
                 transition: .5s;
+
                 &.active {
                     transform: translateY(0);
 
@@ -150,7 +154,8 @@
         line-height: 24px;
         color: white;
         transition: .3s;
-        &:hover{
+
+        &:hover {
             color: #C0C0C0;
         }
     }
@@ -171,6 +176,14 @@
         column-gap: 10px;
         align-items: center;
         text-decoration: none;
+
+        &_a {
+            column-gap: 10px;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+        }
+
         &_text {
             font-family: "Golos Text", sans-serif;
             font-size: 24px;
@@ -223,7 +236,7 @@
         column-gap: 10px;
         align-items: center;
 
-        @include media (1200px){
+        @include media (1200px) {
             flex-direction: column;
             gap: 10px;
         }
@@ -275,11 +288,12 @@
 
         display: none;
 
-        @include media(1200px){
+        @include media(1200px) {
             display: flex;
             justify-content: center;
             margin-top: 24px;
         }
+
         &_card {
             padding: 8px 16px;
             background: #fff;
@@ -333,15 +347,16 @@
 }
 
 
-.menu{
+.menu {
     display: none;
-    
+
     @include media (1200px) {
         display: flex;
         margin-top: 26px;
     }
 }
-.download{
+
+.download {
     @include media(1410px) {
         display: none;
     }
